style.css
* {
  box-sizing: border-box;
}
body {
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  font-size: 14px;
  line-height: 1.42857143;
  color: #333;
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  min-width: 320px;
}
a {
  text-decoration: none;
}
p {
  margin-top: 0;
}
nav {
  background: #C70039;
  color: white;
  display: flex;
  flex-direction: column;
}
nav > div {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}
nav h1,
nav p {
  font-family: 'Raleway', sans-serif;
}
nav h1 {
  padding-left: 24px;
  margin: 0;
  font-size: 36px;
  line-height: 1.1;
  font-weight: 500;
}
nav a {
  color: white;
  flex-shrink: 0;
}
nav a:hover {
  color: inherit;
}
nav a:focus {
  color: inherit;
}
nav p {
  margin: 0;
  font-size: 20px;
  flex-grow: 1;
  padding: 0 24px;
}
#search {
  border: none;
  width: 80%;
  margin: 8px auto;
  border-radius: 2px;
  height: 34px;
  padding: 6px 12px;
  font: inherit;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
  transition: box-shadow ease-in-out .15s;
}
#search:focus {
  outline: 0;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
}
nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
nav li {
  display: inline-block;
}
nav li a {
  padding: 16px;
  display: block;
}
nav li a:hover {
  background: #C78E00;
}
nav li:last-child {
  padding-right: 16px;
}
@media (max-width: 820px) {
  nav {
    text-align: center;
  }
  nav li:last-child {
    padding-right: 0;
  }
}
@media (max-width: 1189px) {
  nav > div {
    margin-top: 8px;
  }
  nav h1,
  nav ul {
    margin: 0 auto;
  }
}
body > div.container {
  flex: 1;
}
.keyword {
  display: inline-block;
  margin: 8px;
}
.badge {
  margin-left: 4px;
  display: inline-block;
  padding: 3px 7px;
  font-size: 12px;
  font-weight: 700;
  line-height: 1;
  color: white;
  background-color: #777;
  border-radius: 10px;
}
.keyword:hover {
  text-decoration: underline;
  cursor: pointer;
}
#results {
  margin-top: 40px;
  margin-bottom: 100px;
}
.entry {
  display: flex;
  padding: 20px 10px;
  border-bottom: 1px solid #E0E0E0;
}
.entry:last-child {
  border-bottom: none;
}
.entry .left-column {
  flex-grow: 1;
  margin-right: 16px;
}
.entry .right-column {
  text-align: right;
  align-self: center;
}
@media (max-width: 360px) {
  .entry {
    flex-wrap: wrap;
  }
  .entry .right-column {
    margin-top: 16px;
  }
}
.entry h3 {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 24px;
  line-height: 1.1;
  font-weight: 500;
}
.entry a {
  margin: 4px;
  padding: 6px 12px;
  display: inline-block;
  color: white;
  border-radius: 4px;
  white-space: nowrap;
}
.entry a.home {
  background: #9DC700;
}
.entry a.home:hover {
  background-color: #39C700;
}
.entry a.source {
  background: #00C78E;
}
.entry a.source:hover {
  background-color: #009DC7;
}
.entry-keyword {
  color: #757575;
  padding: 4px 8px;
  display: inline-block;
  white-space: nowrap;
}
.entry-keyword > .octicon {
  margin-right: 4px;
}
footer {
  background: #C78E00;
  color: white;
  padding: 16px;
}
footer h1 {
  font-size: 20px;
  font-weight: 500;
  padding-left: 16px;
  margin: 0.67em 0;
  margin-top: 20px;
  margin-bottom: 10px;
}
footer a {
  color: #581845;
}
footer a:hover {
  text-decoration: underline;
}
#footerFlex {
  display: flex;
  flex-wrap: wrap;
}
#footerFlex > section {
  width: 50%;
  padding: 16px;
}
@media (max-width: 820px) {
  #footerFlex > section {
    width: auto;
  }
}
.container {
  padding-left: 15px;
  padding-right: 15px;
  margin-left: auto;
  margin-right: auto;
}
@media (min-width: 768px) {
  .container {
    width: 750px;
  }
}
@media (min-width: 992px) {
  .container {
    width: 970px;
  }
}
@media (min-width: 1200px) {
  .container {
    width: 1170px;
  }
}

